scale fix on mobile phones

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,7 +3,7 @@ html,body
 {
     width: 100%;
     height: 100%;
-    margin: 0px;
+    margin: 0 0;
     padding: 0px;
     overflow-x: hidden;
     font-family: 'Frank Ruhl Libre', serif;
